# dakota-technical-assessment

./: .env.example  .gitignore  Makefile  README.md  dagster.yaml  definitions.py  docker-compose.yml  pyproject.toml  run.bat  run.sh  workspace.yaml
.github/workflows/: ci.yml
api/: Dockerfile  pyproject.toml
api/app/: __init__.py  config.py  main.py  models.py  synthetic.py
database/init/: 01_schemas.sql  02_raw_tables.sql  03_ops_tables.sql
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/macros/: generate_schema_name.sql
dbt/models/marts/: _exposures.yml  _schema.yml  agg_daily_region_summary.sql  dim_fuel_type.sql  dim_region.sql  fct_generation_hourly.sql  fct_grid_hourly.sql
dbt/models/staging/: _schema.yml  _sources.yml  stg_eia__demand.sql  (+4 more)
dbt/tests/: assert_demand_positive.sql  assert_forecast_coverage.sql  assert_mape_bounded.sql
docs/: architecture.md  data_model.md  decisions.md  er_diagram.mmd  evaluator_checklist.md  operations.md  reporting.md
ingestion/: config.py  eia_client.py  enrichment_client.py  http.py  loaders.py  logging_config.py
ingestion/fixtures/: eia_demand_sample.json  eia_generation_sample.json
orchestration/: Dockerfile  jobs.py  resources.py  schedules.py
orchestration/assets/: __init__.py  dbt_assets.py  ingestion_assets.py  report_asset.py
orchestration/checks/: __init__.py  raw_checks.py
reports/: charts.py  generate_report.py  queries.py
reports/output/: .gitkeep
reports/templates/: report.html.j2
tests/: conftest.py  test_api.py  test_assets.py  test_eia_client.py  test_report.py
(+1 files in other folders)
