[project]
name = "dakota-energy-pipeline"
version = "0.1.0"
description = "Energy analytics pipeline: EIA ingestion, enrichment, dbt transformations, Dagster orchestration, PDF reporting."
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32",
    "tenacity>=8.3",
    "psycopg[binary]>=3.1",
    "pydantic>=2.7",
    "dagster>=1.8",
    "dagster-webserver>=1.8",
    "dagster-dbt>=0.24",
    "dbt-postgres>=1.8",
    "jinja2>=3.1",
    "weasyprint>=62",
    "matplotlib>=3.9",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    # Used only to unit-test the enrichment service in-process (TestClient).
    "fastapi>=0.111",
    "httpx>=0.27",
    "pydantic-settings>=2.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
