[project]
name = "enrichment-api"
version = "0.1.0"
description = "Synthetic enrichment data service: region metadata, fuel attributes, and demand forecasts."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]
